# ccsid1153_codec

./: .gitignore  README.md  pyproject.toml
src/ccsid1153_codec/: __init__.py  codec.py
